[project]
name = "bpe_tokenizer"
version = "1.0.0"
description = "A high-performance Python tokenizer using Byte-Pair Encoding (BPE) with 50k vocabulary, supporting text encoding, decoding, and normalization for NLP applications."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Md Mohsin" }
]
keywords = ["tokenizer", "BPE", "NLP", "text-processing", "vocabulary"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic"
]

[tool.setuptools]
packages = ["bpe_tokenizer"]
include-package-data = true